# MIDI_OSC_Plugin

./: .gitignore  CMakeLists.txt  osc_receive_example.py
include/: Defines.h
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Robot.cpp  Robot.h  RobotComponent.cpp  RobotComponent.h
